src/snapshots/alma__tokenizer__tests__.snap
---
source: src/tokenizer.rs
expression: result

---
Ok(
    [
        Token {
            kind: Eof,
            position: 0,
            end_position: 0,
            lexeme: "[End of file]",
            line: 1,
            column: 0,
            indent: 0,
        },
    ],
)
