src/snapshots/alma__tokenizer__tests__123 or &"abc".snap
---
source: src/tokenizer.rs
expression: result

---
Err(
    [
        Error {
            line: 2,
            column: 4,
            message: "Unexpected character \'&\'.\n\n  1│  123\n  2│   or &\"abc\"\n   │      ↑",
        },
    ],
)
