src/snapshots/alma__tokenizer__tests__123.345.snap
---
source: src/tokenizer.rs
expression: result

---
Ok(
    [
        Token {
            kind: Float,
            position: 0,
            end_position: 7,
            lexeme: "123.345",
            line: 1,
            column: 0,
            indent: 0,
        },
        Token {
            kind: Eof,
            position: 7,
            end_position: 7,
            lexeme: "[End of file]",
            line: 1,
            column: 7,
            indent: 0,
        },
    ],
)
