src/snapshots/alma__tokenizer__tests__123.sd.snap
---
source: src/tokenizer.rs
expression: result

---
Err(
    [
        Error {
            line: 1,
            column: 3,
            message: "Expected more digits after a dot in a number.\n\n  1│  123.sd\n   │     ↑",
        },
    ],
)
