src/snapshots/alma__tokenizer__tests__123.snap
---
source: src/tokenizer.rs
expression: result

---
Ok(
    [
        Token {
            kind: Float,
            position: 0,
            end_position: 3,
            lexeme: "123",
            line: 1,
            column: 0,
            indent: 0,
        },
        Token {
            kind: Eof,
            position: 3,
            end_position: 3,
            lexeme: "[End of file]",
            line: 1,
            column: 3,
            indent: 0,
        },
    ],
)
