src/snapshots/alma__tokenizer__tests__empty_file.snap
---
source: src/tokenizer.rs
assertion_line: 427
expression: "tokenize(\"\")"
---
Ok(
    [
        Token {
            kind: Eof,
            indent: 0,
            start: 0,
            end: 0,
            line: 1,
            column: 0,
        },
    ],
)
