src/snapshots/alma__tokenizer__tests__scan_tokens-4.snap
---
source: src/tokenizer.rs
expression: "tokenize(\"123.sd\")"

---
Err(
    [
        Error {
            line: 1,
            column: 3,
            message: "Expected more digits after a dot in a number.\n\n  1│  123.sd\n   │     ↑",
        },
    ],
)
