src/snapshots/alma__tokenizer__tests__scan_tokens.snap
---
source: src/tokenizer.rs
expression: "tokenize(\"\")"

---
Ok(
    [
        Token {
            kind: Eof,
            position: 0,
            end_position: 0,
            lexeme: "[End of file]",
            line: 1,
            column: 0,
            indent: 0,
        },
    ],
)
