src/snapshots/alma__tokenizer__tests__tokenize_float.snap
---
source: src/tokenizer.rs
assertion_line: 437
expression: "tokenize(\"123.345\")"
---
Ok(
    [
        Token {
            kind: Float(
                SymbolU32 {
                    value: 1,
                },
            ),
            indent: 0,
            start: 0,
            end: 7,
            line: 1,
            column: 0,
        },
        Token {
            kind: Eof,
            indent: 0,
            start: 7,
            end: 7,
            line: 1,
            column: 7,
        },
    ],
)
