src/snapshots/alma__tokenizer__tests__tokenize_int.snap
---
source: src/tokenizer.rs
assertion_line: 432
expression: "tokenize(\"123\")"
---
Ok(
    [
        Token {
            kind: Float(
                SymbolU32 {
                    value: 1,
                },
            ),
            indent: 0,
            start: 0,
            end: 3,
            line: 1,
            column: 0,
        },
        Token {
            kind: Eof,
            indent: 0,
            start: 3,
            end: 3,
            line: 1,
            column: 3,
        },
    ],
)
